# terabee_api

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
ciScripts/: unitTestScript.sh
cmake/: TerabeeApiConfig.cmake.in
examples/: CMakeLists.txt  ExampleAsyncAdvanced.cpp  ExampleAsyncSimple.cpp  ExampleReadEvo15m.cpp  ExampleReadEvo3m.cpp  ExampleReadEvo40m.cpp  ExampleReadEvo600Hz.cpp  ExampleReadEvo60m.cpp  ExampleReadEvo64px.cpp  ExampleReadEvoMini.cpp  ExampleReadEvoThermal.cpp  ExampleReadMultiflex.cpp  ExampleReadTowerEvo.cpp
include/terabee/: DistanceData.hpp  ITerarangerEvo15m.hpp  ITerarangerEvo3m.hpp  ITerarangerEvo40m.hpp  ITerarangerEvo600Hz.hpp  ITerarangerEvo60m.hpp  ITerarangerEvo64px.hpp  ITerarangerEvoMini.hpp  ITerarangerEvoThermal33.hpp  ITerarangerEvoThermal90.hpp  ITerarangerFactory.hpp  ITerarangerMultiflex.hpp  ITerarangerTowerEvo.hpp  ImuData.hpp  ThermalData.hpp  TowerDistanceData.hpp
include/terabee/internal/: common_definitions.hpp
include/terabee/internal/crc/: crc.hpp
include/terabee/internal/endian/: swapEndian.hpp
include/terabee/internal/factories/: TerarangerFactory.hpp
include/terabee/internal/logger/: Logger.hpp
include/terabee/internal/ring_buffer/: RingBuffer.hpp
include/terabee/internal/serial_communication/: ISerial.hpp  Serial.hpp
include/terabee/internal/teraranger/: TerarangerBasicCommon.hpp  TerarangerEvo15m.hpp  TerarangerEvo3m.hpp  TerarangerEvo40m.hpp  TerarangerEvo600Hz.hpp  TerarangerEvo60m.hpp  TerarangerEvo64px.hpp  TerarangerEvoMini.hpp  TerarangerEvoThermal33.hpp  TerarangerEvoThermal90.hpp  TerarangerMultiflex.hpp  TerarangerThermalCommon.hpp  TerarangerTowerEvo.hpp
src/factories/: FactoryGetters.cpp  TerarangerFactory.cpp
src/logger/: Logger.cpp
src/ring_buffer/: RingBuffer.cpp
src/serial_communication/: Serial.cpp
src/teraranger/: TerarangerBasicCommon.cpp  TerarangerEvo15m.cpp  TerarangerEvo3m.cpp  TerarangerEvo40m.cpp  TerarangerEvo600Hz.cpp  TerarangerEvo60m.cpp  TerarangerEvo64px.cpp  TerarangerEvoMini.cpp  TerarangerEvoThermal33.cpp  TerarangerEvoThermal90.cpp  TerarangerMultiflex.cpp  TerarangerThermalCommon.cpp  TerarangerTowerEvo.cpp
tests/: CMakeLists.txt
tests/mocks/: MockISerial.hpp
tests/ring_buffer_tests/: CMakeLists.txt  RingBufferTests.cpp
tests/teraranger_tests/: CMakeLists.txt  TerarangerEvo64pxTests.cpp  TerarangerEvoBasicCommonTests.cpp  TerarangerEvoMiniTests.cpp  TerarangerEvoThermalCommonTests.cpp  TerarangerMultiflexTests.cpp  TerarangerTowerEvoTests.cpp
